[tool.poetry]
name = "agentguard"
version = "0.1.0"
description = "🛡️ A security middleware for LangChain agents — intercept, validate and safely execute LLM-generated code."
authors = ["Thomas LEON <Thomas.leon1707@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Thomas-LEON/agentguard"
repository = "https://github.com/Thomas-LEON/agentguard"
keywords = ["langchain", "llm", "ai-safety", "agentic-ai", "security", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
packages = [{include = "agentguard"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = ">=0.2"
langchain-core = ">=0.2"
pydantic = "^2.0"
python-dotenv = {version = "^1.0", optional = true}

[tool.poetry.extras]
examples = ["python-dotenv", "langchain-google-genai"]
gemini = ["langchain-google-genai"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
ruff = "^0.4"
mypy = "^1.0"
pre-commit = "^3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=agentguard --cov-report=term-missing"
